--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,11 @@
     <string name="app_name">Portfolio</string>
 
     <string name="main_name">Ji SungBin</string>
+    <string name="main_description">Android Programmer</string>
+    <string name="main_start">→</string>
+
+    <string name="menu_emoji">내 정보</string>
+    <string name="menu_skill">스킬</string>
+    <string name="menu_android">개발</string>
+    <string name="menu_info">앱 정보</string>
 </resources>
