--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="image_profile">profile-image</string>
+
     <string name="app_name">Portfolio</string>
 
     <string name="main_name">Ji SungBin</string>
@@ -9,10 +11,23 @@
     <string name="menu_introduce">프로필</string>
     <string name="menu_skill">스킬</string>
     <string name="menu_android">개발</string>
-    <string name="menu_info">정보</string>
+    <string name="menu_information">정보</string>
 
     <string name="content_profile">Profile</string>
     <string name="content_skill">Programming Skill</string>
-    <string name="content_android">Android Developed</string>
-    <string name="content_info">Application Information</string>
+    <string name="content_android">Developed</string>
+    <string name="content_information">App Information</string>
+
+    <string name="introduce_name">지성빈</string>
+    <string name="introduce_title_name">이름</string>
+    <string name="introduce_title_birthday">생일</string>
+    <string name="introduce_birthday">2002년 12월 02일</string>
+    <string name="introduce_title_age">나이</string>
+    <string name="introduce_title_mail">메일</string>
+    <string name="introduce_mail">mail@sungbin.me</string>
+    <string name="introduce_title_site">개인 사이트</string>
+    <string name="introduce_site">devl.es\nsungbin.me\ngithub.com/sungbin5304</string>
+    <string name="introduce_title_bio">소개</string>
+    <string name="introduce_bio">초등학교 6학년 때 자바스크립트로 프로그래밍에 입문하였고, 중학교 2학년 때 안드로이드 프로그래밍을 시작하였다.\n\n안드로이드 프로그래머를 꿈꾸고 있다.</string>
+
 </resources>
