:melon: :melon: :melon: :melon: :melon: :melon:

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="image_profile">profile-image</string>
+    <string name="image_project_banner">project-banner</string>
 
     <string name="app_name">Portfolio</string>
 
@@ -18,7 +19,6 @@
     <string name="content_android">Developed</string>
     <string name="content_information">App Information</string>
 
-
     <string name="introduce_title_name">이름</string>
     <string name="introduce_name">지성빈</string>
     <string name="introduce_title_birthday">생일</string>
@@ -28,12 +28,19 @@
     <string name="introduce_title_mail">메일</string>
     <string name="introduce_mail">mail@sungbin.me</string>
     <string name="introduce_title_site">개인 사이트</string>
-    <string name="introduce_site">devl.es\nsungbin.me\ngithub.com/sungbin5304</string>
+    <string name="introduce_site">devl.es\nsungbin.me\ntwitter.com/sungbin_dev\ngithub.com/sungbin5304</string>
     <string name="introduce_title_bio">소개</string>
     <string name="introduce_bio">초등학교 6학년 때 자바스크립트로 프로그래밍에 입문하였고, 중학교 2학년 때 안드로이드 프로그래밍을 시작하였다.\n\n안드로이드 프로그래머를 꿈꾸고 있다.</string>
 
     <string name="skill_title_usable_language">사용가능 언어</string>
     <string name="skill_usable_language">자바\n코틀린💙\n자바스크립트</string>
-    <string name="skill_learning_language">배우고있는 언어</string>
+    <string name="skill_title_learning_language">배우고있는 언어</string>
+    <string name="skill_learning_language">Lua\nDeno\nHTML\nNode.js\nDart (Flutter)</string>
+    <string name="skill_title_dev_skill">개발 기술</string>
+    <string name="skill_dev_skill">1. ReactiveX\n ┕ RxJava\n ┕ RxKotlin\n ┕ RxRetrofit\n ┕ RxAndroid\n2. Coroutines\n3. MVVM Pattern\n4. Jetpack Compose\n5. Dependency Injection\n ┕ Hilt\n ┕ Dagger2</string>
+
+    <string name="project_preview_name">DevLes</string>
+    <string name="project_preview_description">개인 풀스택 제작 개발 블로그</string>
+    <string name="project_dev_android">개발 프로젝트</string>
 
 </resources>
